--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,77 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+
+.hero-section {
+    //background: red;
+}
+.hero-section .hero-image {
+    width: auto;
+    height: auto;
+    padding-top: 2px;
+}
+
+.product-section .product-title{
+    text-align: center;
+}
+
+.product-section .sub-title{
+    text-align: center;
+}
+
+.product-shop{
+    margin-top: 5px;
+}
+.product-shop .card img{
+    max-height: 150px;
+}
+
+.price{
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.description{
+  color: #7F7F7F;
+}
+
+
+
+footer{
+
+    background: gray;
+    width: 100%;
+    height: 150px;
+    margin-top: 4px;
+}
+
+footer{
+    background: gray;
+    color: white;
+    padding: 40px 0;
+
+    .footer-content{
+        display: flex;
+        justify-content: space-between;
+
+        ul{
+            display: flex;
+            justify-content: space-between;
+            width: 30%;
+
+            a{
+                color: white;
+            }
+        }
+    }
+}
+
+
+
+
